--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!-- spinner  -->
+    <div id="loading-spinner" class="text-center d-none">
+
+      <div class="spinner-border text-warning" role="status">
+      </div>
+
+    </div>
+
+
+
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
